Fix mobile white space issues - full width blue sections and footer

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
   background-color: #FFFFFF;
 }
 
@@ -18,4 +20,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #FFFFFF;
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
